@@ -523,8 +523,8 @@ got_listener:
         * We now have a connection, so set it up with the appropriate
         * socket options, file descriptors, and read/write buffers.
         */
-        current_conn = ap_run_create_connection(ptrans, ap_server_conf, csd, 
-                                                my_worker_num, sbh);
+        current_conn = ap_new_connection(ptrans, ap_server_conf, csd, 
+                                         my_worker_num, sbh);
         if (current_conn) {
             ap_process_connection(current_conn);
             ap_lingering_close(current_conn);
